feat(core): update default OpenRouter model and improve RAG integration
- Switch default OpenRouter model from 'google/gemini-2.5-pro' to 'qwen/qwen3-coder' for better performance
- Integrate Retrieval-Augmented Generation (RAG) system into the core CLI workflow
- Add new 'rag' command for querying project context with AI-powered responses
- Improve code editing prompts and workflows for better AI accuracy
- Clean up redundant code and enhance error handling in refactor operations
- Update requirements.txt with project description and usage examples

This commit enhances OmniForge's contextual awareness and code generation capabilities while streamlining the user experience. The RAG integration allows the AI to better understand project-specific context when answering queries or performing edits.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
-# Core dependencies
-requests==2.32.3
-rich==13.7.1
-prompt-toolkit==3.0.47
+Hello! I'm OmniForge, an AI coding assistant. I can help you scan, understand, and refactor your codebase using local (Ollama) or remote (OpenRouter) LLMs.
 
-# AST-based code editing
-astor==0.8.1
+I see you've opened the OmniForge project directory. Some key things I can help with:
 
-# Interactive model selection
-simple-term-menu==1.6.4
+1. **Project Analysis**: I can look at your files to understand the structure
+2. **Code Editing**: I can make precise edits to functions/classes using AST-based transformations
+3. **Refactoring**: I can perform multi-file architectural changes with a plan
+4. **File Creation**: I can generate new files based on instructions
+
+For example:
+- `look .` to scan the project
+- `edit code_editor.py "add docstrings to main methods"`
+- `refactor "extract git operations into a separate module"`
+- `create new_module.py "implement a simple HTTP client"`
+
+What would you like to do with this project?
